--- a/simplelivestreaming.html
+++ b/simplelivestreaming.html
@@ -36,8 +36,8 @@
 
   const config = {
     credential: {
-      serviceId: '발급 받은 Service Id를 입력',
-      key: '발급 받은 Service Key를 입력'
+      serviceId: '7500adc6-4173-4efa-b25a-b63ffcfaefb6',
+      key: '705da5e7172a511fe054b6976179ea804bef28a2e1c0091a80d7e1b03044603d'
     },
     view: {
       local: '#localVideo'
