--- a/watch.html
+++ b/watch.html
@@ -11,6 +11,7 @@
             margin-left: auto;
             margin-right: auto;
             width: 700px;
+            align-content: center;
         }
 
         #wingleft {
