--- a/watch.html
+++ b/watch.html
@@ -7,8 +7,8 @@
 
     <!-- 아주 조금 예쁘게 하기 -->
     <style>
+        margin-left: auto;
         #mymain {
-            margin-left: auto;
             margin-right: auto;
             width: 900px;
             align-content: center;
@@ -45,8 +45,8 @@
   let remon;
   const config = {
     credential: {
-      serviceId: '발급 받은 Service Id를 입력',
-      key: '발급 받은 Secret Key를 입력'
+          serviceId: '7500adc6-4173-4efa-b25a-b63ffcfaefb6',
+          key: '705da5e7172a511fe054b6976179ea804bef28a2e1c0091a80d7e1b03044603d'
     },
     view: {
       remote: '#remoteVideo'
