--- a/watch.html
+++ b/watch.html
@@ -40,6 +40,7 @@
 
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@remotemonster/sdk/remon.min.js"></script>
+    <script remon.joinCast("my-first-livestreaming")></script>
     <script>
   let isConnected = false;
   let remon;
